[gd_scene load_steps=35 format=3 uid="uid://dd6hd0khfm6e3"]

[ext_resource type="Texture2D" uid="uid://cphlblvt01plb" path="res://addons/hyh.digression/icons/icon_chat.svg" id="1_us012"]
[ext_resource type="Script" uid="uid://da4noqe3f5mj5" path="res://addons/hyh.digression/editor/preview/DialogueGraphPreview.gd" id="1_w87rg"]
[ext_resource type="Script" uid="uid://dvpgqpv47tx2d" path="res://addons/hyh.digression/editor/DigressionDialogueController.gd" id="2_n6g8g"]
[ext_resource type="PackedScene" uid="uid://dhubj3hnf0rxp" path="res://addons/hyh.digression/editor/controls/GraphBreadcrumbs.tscn" id="2_vtmjw"]
[ext_resource type="Script" uid="uid://cesu6tdfysi6s" path="res://addons/hyh.digression/editor/DigressionDialogueVariableStore.gd" id="3_7mchj"]
[ext_resource type="Script" uid="uid://bv4v551hteofo" path="res://addons/hyh.digression/editor/DigressionDialogue.gd" id="3_ftyji"]
[ext_resource type="Texture2D" uid="uid://bglkyq1rksntd" path="res://addons/hyh.digression/icons/icon_play.svg" id="4_waylo"]
[ext_resource type="Texture2D" uid="uid://c60gjaaaohbri" path="res://addons/hyh.digression/icons/icon_stop.svg" id="5_0jdxs"]
[ext_resource type="Texture2D" uid="uid://csvi3x4re0orp" path="res://addons/hyh.digression/icons/icon_notification.svg" id="8_8dwbl"]
[ext_resource type="Texture2D" uid="uid://cvtr66eu3auu8" path="res://addons/hyh.digression/icons/icon_fast_forward.svg" id="9_7bwam"]
[ext_resource type="Texture2D" uid="uid://cebs8ykdq7261" path="res://addons/hyh.digression/icons/icon_reload.svg" id="9_7foww"]
[ext_resource type="Texture2D" uid="uid://df72g7dkdvnxo" path="res://addons/hyh.digression/icons/icon_menu_bright.svg" id="10_0arbr"]
[ext_resource type="PackedScene" uid="uid://ccvd6pqrqs07a" path="res://addons/hyh.digression/editor/preview/minimap/GraphMiniMap.tscn" id="10_rr72e"]
[ext_resource type="Texture2D" uid="uid://cx7rvhxmb6eu6" path="res://addons/hyh.digression/icons/icon_character_by_character.svg" id="11_a3snd"]
[ext_resource type="Texture2D" uid="uid://ll51ea56bv8o" path="res://addons/hyh.digression/icons/icon_invisible.svg" id="11_frgio"]
[ext_resource type="AudioStream" uid="uid://c6yb4ye6xx7eg" path="res://addons/hyh.digression/sounds/dialogue_displayed.wav" id="14_56svl"]
[ext_resource type="AudioStream" uid="uid://sve8rk4702u6" path="res://addons/hyh.digression/sounds/character_displayed.wav" id="17_d4xfg"]

[sub_resource type="InputEventKey" id="InputEventKey_2ncwv"]
device = -1
shift_pressed = true
ctrl_pressed = true
keycode = 65
unicode = 65

[sub_resource type="Shortcut" id="Shortcut_iufqn"]
resource_name = "Play Audio"
events = [SubResource("InputEventKey_2ncwv")]

[sub_resource type="InputEventKey" id="InputEventKey_185p2"]
device = -1
shift_pressed = true
ctrl_pressed = true
keycode = 83
unicode = 83

[sub_resource type="Shortcut" id="Shortcut_ys2i3"]
resource_name = "Show Processing Details"
events = [SubResource("InputEventKey_185p2")]

[sub_resource type="InputEventKey" id="InputEventKey_xrxgj"]
device = -1
shift_pressed = true
ctrl_pressed = true
keycode = 70
unicode = 70

[sub_resource type="Shortcut" id="Shortcut_ja11t"]
resource_name = "Fast-Forward"
events = [SubResource("InputEventKey_xrxgj")]

[sub_resource type="InputEventKey" id="InputEventKey_t5d3b"]
device = -1
shift_pressed = true
ctrl_pressed = true
keycode = 67
unicode = 67

[sub_resource type="Shortcut" id="Shortcut_bbp2b"]
resource_name = "Characterwise"
events = [SubResource("InputEventKey_t5d3b")]

[sub_resource type="InputEventKey" id="InputEventKey_64pmi"]
device = -1
ctrl_pressed = true
keycode = 4194336

[sub_resource type="Shortcut" id="Shortcut_6yhs6"]
resource_name = "Start Cutscene"
events = [SubResource("InputEventKey_64pmi")]

[sub_resource type="InputEventKey" id="InputEventKey_lwssn"]
device = -1
ctrl_pressed = true
keycode = 4194339

[sub_resource type="Shortcut" id="Shortcut_ym8xa"]
resource_name = "Stop Processing"
events = [SubResource("InputEventKey_lwssn")]

[sub_resource type="InputEventKey" id="InputEventKey_3y117"]
device = -1
ctrl_pressed = true
keycode = 4194337

[sub_resource type="Shortcut" id="Shortcut_18u0w"]
resource_name = "Restart Cutscene"
events = [SubResource("InputEventKey_3y117")]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8xo1q"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(1, 0.365, 0.365, 1)
draw_center = false
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_detail = 1

[sub_resource type="InputEventKey" id="InputEventKey_0cx2p"]
device = -1
keycode = 4194309

[sub_resource type="Shortcut" id="Shortcut_0r03i"]
resource_name = "Start Cutscene"
events = [SubResource("InputEventKey_0cx2p")]

[node name="DialogueGraphPreview" type="VBoxContainer"]
offset_right = 1612.0
offset_bottom = 761.0
script = ExtResource("1_w87rg")

[node name="GraphController" type="Node" parent="."]
script = ExtResource("2_n6g8g")
global_store = NodePath("../GlobalStore")
local_store = NodePath("../LocalStore")

[node name="GlobalStore" type="Node" parent="."]
script = ExtResource("3_7mchj")

[node name="LocalStore" type="Node" parent="."]
script = ExtResource("3_7mchj")

[node name="DialogueGraph" type="Node" parent="."]
script = ExtResource("3_ftyji")

[node name="TitleBar" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="TitleBar"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_right = 6

[node name="TextureRect" type="TextureRect" parent="TitleBar/MarginContainer"]
layout_mode = 2
size_flags_vertical = 4
texture = ExtResource("1_us012")

[node name="GraphBreadcrumbs" parent="TitleBar" instance=ExtResource("2_vtmjw")]
layout_mode = 2
size_flags_vertical = 4
navigable = false

[node name="HSplitContainer" type="HSplitContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3

[node name="VariableStoresContainer" type="VBoxContainer" parent="HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5

[node name="HB" type="HBoxContainer" parent="HSplitContainer/VariableStoresContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="HSplitContainer/VariableStoresContainer/HB"]
layout_mode = 2
text = "Variable Stores
"

[node name="StoresMenuButton" type="MenuButton" parent="HSplitContainer/VariableStoresContainer/HB"]
layout_mode = 2
size_flags_horizontal = 10
icon = ExtResource("10_0arbr")
item_count = 7
popup/item_0/text = "Add Variable..."
popup/item_0/id = 0
popup/item_1/text = ""
popup/item_1/id = 1
popup/item_1/separator = true
popup/item_2/text = "Load (Add)..."
popup/item_2/id = 2
popup/item_3/text = "Load (Replace)..."
popup/item_3/id = 3
popup/item_4/text = "Save..."
popup/item_4/id = 4
popup/item_5/text = ""
popup/item_5/id = 5
popup/item_5/separator = true
popup/item_6/text = "Clear All"
popup/item_6/id = 6

[node name="VariableStoresTree" type="Tree" parent="HSplitContainer/VariableStoresContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_vertical = 3
columns = 2
hide_root = true

[node name="HSplitContainer" type="HSplitContainer" parent="HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0

[node name="VB" type="VBoxContainer" parent="HSplitContainer/HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0

[node name="HB" type="HBoxContainer" parent="HSplitContainer/HSplitContainer/VB"]
layout_mode = 2

[node name="PlayAudioButton" type="Button" parent="HSplitContainer/HSplitContainer/VB/HB"]
layout_mode = 2
tooltip_text = "Play audio on dialogue node display."
toggle_mode = true
button_pressed = true
shortcut = SubResource("Shortcut_iufqn")
icon = ExtResource("8_8dwbl")
flat = true

[node name="ShowProcessingButton" type="Button" parent="HSplitContainer/HSplitContainer/VB/HB"]
layout_mode = 2
tooltip_text = "Show details like setting of variables, processing of routing nodes, and more."
toggle_mode = true
shortcut = SubResource("Shortcut_ys2i3")
icon = ExtResource("11_frgio")
flat = true

[node name="FastForwardButton" type="Button" parent="HSplitContainer/HSplitContainer/VB/HB"]
layout_mode = 2
tooltip_text = "Automatically continues all dialogue and action nodes, only pausing on choice nodes."
toggle_mode = true
shortcut = SubResource("Shortcut_ja11t")
icon = ExtResource("9_7bwam")
flat = true

[node name="CharacterwiseButton" type="Button" parent="HSplitContainer/HSplitContainer/VB/HB"]
layout_mode = 2
tooltip_text = "Display dialogue character by character instead of all at once."
toggle_mode = true
shortcut = SubResource("Shortcut_bbp2b")
icon = ExtResource("11_a3snd")
flat = true

[node name="StartButton" type="Button" parent="HSplitContainer/HSplitContainer/VB/HB"]
layout_mode = 2
size_flags_horizontal = 10
tooltip_text = "Run the current cutscene graph."
shortcut = SubResource("Shortcut_6yhs6")
icon = ExtResource("4_waylo")
flat = true

[node name="StopButton" type="Button" parent="HSplitContainer/HSplitContainer/VB/HB"]
layout_mode = 2
size_flags_horizontal = 8
tooltip_text = "Stop processing the graph."
disabled = true
shortcut = SubResource("Shortcut_ym8xa")
icon = ExtResource("5_0jdxs")
flat = true

[node name="RestartButton" type="Button" parent="HSplitContainer/HSplitContainer/VB/HB"]
layout_mode = 2
size_flags_horizontal = 8
tooltip_text = "Restart processing the graph."
disabled = true
shortcut = SubResource("Shortcut_18u0w")
icon = ExtResource("9_7foww")
flat = true

[node name="PanelContainer" type="PanelContainer" parent="HSplitContainer/HSplitContainer/VB"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0
theme_override_styles/panel = SubResource("StyleBoxFlat_8xo1q")

[node name="MC" type="MarginContainer" parent="HSplitContainer/HSplitContainer/VB/PanelContainer"]
layout_mode = 2

[node name="DialogueScrollContainer" type="ScrollContainer" parent="HSplitContainer/HSplitContainer/VB/PanelContainer/MC"]
visible = false
custom_minimum_size = Vector2(600, 0)
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0

[node name="MC" type="MarginContainer" parent="HSplitContainer/HSplitContainer/VB/PanelContainer/MC/DialogueScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="DialogueContainer" type="VBoxContainer" parent="HSplitContainer/HSplitContainer/VB/PanelContainer/MC/DialogueScrollContainer/MC"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 10
theme_override_constants/separation = 16

[node name="BeginContainer" type="CenterContainer" parent="HSplitContainer/HSplitContainer/VB/PanelContainer/MC"]
layout_mode = 2

[node name="VB" type="VBoxContainer" parent="HSplitContainer/HSplitContainer/VB/PanelContainer/MC/BeginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="HSplitContainer/HSplitContainer/VB/PanelContainer/MC/BeginContainer/VB"]
layout_mode = 2
text = "Prepare your test environment if necessary and then click run to begin"

[node name="ShowProcessingCheckBox" type="CheckBox" parent="HSplitContainer/HSplitContainer/VB/PanelContainer/MC/BeginContainer/VB"]
layout_mode = 2
size_flags_horizontal = 4
text = "Show processing details"

[node name="RunButton" type="Button" parent="HSplitContainer/HSplitContainer/VB/PanelContainer/MC/BeginContainer/VB"]
layout_mode = 2
size_flags_horizontal = 4
shortcut = SubResource("Shortcut_0r03i")
text = "Run"
icon = ExtResource("4_waylo")

[node name="VSplitContainer" type="VSplitContainer" parent="HSplitContainer/HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="GraphMiniMap" parent="HSplitContainer/HSplitContainer/VSplitContainer" instance=ExtResource("10_rr72e")]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
size_flags_vertical = 3
scroll_offset = Vector2(-214, -107)

[node name="VB" type="VBoxContainer" parent="HSplitContainer/HSplitContainer/VSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 1.32

[node name="Label" type="Label" parent="HSplitContainer/HSplitContainer/VSplitContainer/VB"]
layout_mode = 2
text = "Characters"

[node name="CharactersTree" type="Tree" parent="HSplitContainer/HSplitContainer/VSplitContainer/VB"]
layout_mode = 2
size_flags_vertical = 3
columns = 3
column_titles_visible = true
hide_root = true

[node name="DialogueDisplayedPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("14_56svl")

[node name="CharacterDisplayedPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("17_d4xfg")
volume_db = -9.905
pitch_scale = 0.77

[connection signal="action_requested" from="GraphController" to="." method="_on_graph_controller_action_requested"]
[connection signal="choice_dialogue_display_requested" from="GraphController" to="." method="_on_graph_controller_choice_dialogue_display_requested"]
[connection signal="choice_display_requested" from="GraphController" to="." method="_on_graph_controller_choice_display_requested"]
[connection signal="dialogue_display_requested" from="GraphController" to="." method="_on_graph_controller_dialogue_display_requested"]
[connection signal="dialogue_graph_completed" from="GraphController" to="." method="_on_graph_controller_dialogue_graph_completed"]
[connection signal="dialogue_graph_resumed" from="GraphController" to="." method="_on_graph_controller_dialogue_graph_resumed"]
[connection signal="dialogue_graph_started" from="GraphController" to="." method="_on_graph_controller_dialogue_graph_started"]
[connection signal="sub_graph_entered" from="GraphController" to="." method="_on_graph_controller_sub_graph_entered"]
[connection signal="item_edited" from="HSplitContainer/VariableStoresContainer/VariableStoresTree" to="." method="_on_variable_stores_tree_item_edited"]
[connection signal="toggled" from="HSplitContainer/HSplitContainer/VB/HB/PlayAudioButton" to="." method="_on_play_audio_button_toggled"]
[connection signal="toggled" from="HSplitContainer/HSplitContainer/VB/HB/ShowProcessingButton" to="." method="_on_show_processing_button_toggled"]
[connection signal="toggled" from="HSplitContainer/HSplitContainer/VB/HB/FastForwardButton" to="." method="_on_fast_forward_button_toggled"]
[connection signal="toggled" from="HSplitContainer/HSplitContainer/VB/HB/CharacterwiseButton" to="." method="_on_characterwise_button_toggled"]
[connection signal="pressed" from="HSplitContainer/HSplitContainer/VB/HB/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="HSplitContainer/HSplitContainer/VB/HB/StopButton" to="." method="_on_stop_button_pressed"]
[connection signal="pressed" from="HSplitContainer/HSplitContainer/VB/HB/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="toggled" from="HSplitContainer/HSplitContainer/VB/PanelContainer/MC/BeginContainer/VB/ShowProcessingCheckBox" to="." method="_on_show_processing_check_box_toggled"]
[connection signal="pressed" from="HSplitContainer/HSplitContainer/VB/PanelContainer/MC/BeginContainer/VB/RunButton" to="." method="_on_run_button_pressed"]
